[gd_scene load_steps=22 format=3 uid="uid://gml8gorru1ib"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_pyrsy"]
[ext_resource type="Script" path="res://States/StateManager.gd" id="2_p5w6j"]
[ext_resource type="Script" path="res://States/UI States/Menu States/LocalOrOnline.gd" id="3_46e2s"]
[ext_resource type="Script" path="res://States/UI States/Menu States/OnlineMatchmaking.gd" id="4_2rc4e"]
[ext_resource type="Script" path="res://States/UI States/Menu States/WaitingForPlayers.gd" id="5_aqwv2"]
[ext_resource type="Script" path="res://UI/Loading.gd" id="5_lvl80"]
[ext_resource type="Script" path="res://UI/FailedToLoad.gd" id="6_40bju"]
[ext_resource type="Script" path="res://States/UI States/Menu States/PlayerSelect.gd" id="6_wkgiu"]
[ext_resource type="Script" path="res://UI/UserDisconnect.gd" id="7_5xc32"]
[ext_resource type="Script" path="res://States/UI States/Menu States/RoundStarting.gd" id="7_ooc61"]
[ext_resource type="Script" path="res://States/UI States/Menu States/RoundInProgress.gd" id="8_k35gp"]
[ext_resource type="Script" path="res://States/UI States/Menu States/EndScreen.gd" id="9_in05g"]
[ext_resource type="PackedScene" uid="uid://cr8xyc1mvkjmf" path="res://local_or_online.tscn" id="17_v288q"]
[ext_resource type="PackedScene" uid="uid://criis4an0x8if" path="res://matchmaking_menu.tscn" id="18_0ljxa"]
[ext_resource type="PackedScene" uid="uid://c3uo54o4oulo5" path="res://waiting_for_connect.tscn" id="19_swbm4"]
[ext_resource type="PackedScene" uid="uid://ch87pslocldsu" path="res://player_select_menu.tscn" id="20_q4gvd"]
[ext_resource type="PackedScene" uid="uid://b18lkbyalwby" path="res://loading.tscn" id="21_ue38o"]
[ext_resource type="PackedScene" uid="uid://c64uvbsdkg86h" path="res://failed_to_load.tscn" id="22_ffp44"]
[ext_resource type="PackedScene" uid="uid://b5imxvvgtef5r" path="res://user_disconnect.tscn" id="23_83oc1"]
[ext_resource type="PackedScene" uid="uid://ba0uba5gvtlbm" path="res://start_anim.tscn" id="24_acm6t"]
[ext_resource type="PackedScene" uid="uid://b8qylbg6j5sq" path="res://end_game_panel.tscn" id="24_ifdyl"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_pyrsy")

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_p5w6j")
starting_state = NodePath("LocalOrOnline")

[node name="LocalOrOnline" type="Node" parent="StateManager"]
script = ExtResource("3_46e2s")
do_process = false
do_physics_process = false
do_network_process = false

[node name="OnlineMatchmaking" type="Node" parent="StateManager"]
script = ExtResource("4_2rc4e")
do_process = false
do_physics_process = false
do_network_process = false

[node name="Loading" type="Node" parent="StateManager" node_paths=PackedStringArray("timer")]
script = ExtResource("5_lvl80")
timer = NodePath("MaxLoadTime")
do_process = false
do_physics_process = false
do_network_process = false

[node name="MaxLoadTime" type="Timer" parent="StateManager/Loading"]
wait_time = 2.0
one_shot = true

[node name="FailedToLoad" type="Node" parent="StateManager"]
script = ExtResource("6_40bju")
do_process = false
do_physics_process = false
do_network_process = false

[node name="UserDisconnect" type="Node" parent="StateManager"]
script = ExtResource("7_5xc32")
do_process = false
do_physics_process = false
do_network_process = false

[node name="WaitingForPlayers" type="Node" parent="StateManager"]
script = ExtResource("5_aqwv2")
do_process = false
do_physics_process = false
do_network_process = false

[node name="PlayerSelect" type="Node" parent="StateManager"]
script = ExtResource("6_wkgiu")
do_process = false
do_physics_process = false
do_network_process = false

[node name="RoundStarting" type="Node" parent="StateManager"]
script = ExtResource("7_ooc61")
do_process = false
do_physics_process = false
do_network_process = false

[node name="RoundInProgress" type="Node" parent="StateManager"]
script = ExtResource("8_k35gp")
do_process = false
do_network_process = false

[node name="EndScreen" type="Node" parent="StateManager"]
script = ExtResource("9_in05g")
do_process = false
do_physics_process = false
do_network_process = false

[node name="SelectionUI" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LocalOrOnline" parent="SelectionUI" instance=ExtResource("17_v288q")]
unique_name_in_owner = true
visible = false

[node name="Matchmaking Menu" parent="SelectionUI" instance=ExtResource("18_0ljxa")]
unique_name_in_owner = true
visible = false

[node name="Waiting For Connect" parent="SelectionUI" instance=ExtResource("19_swbm4")]
unique_name_in_owner = true
visible = false

[node name="Player Select Menu" parent="SelectionUI" instance=ExtResource("20_q4gvd")]
unique_name_in_owner = true
visible = false

[node name="Loading" parent="SelectionUI" instance=ExtResource("21_ue38o")]
unique_name_in_owner = true

[node name="FailedToLoad" parent="SelectionUI" instance=ExtResource("22_ffp44")]
unique_name_in_owner = true
visible = false

[node name="UserDisconnect" parent="SelectionUI" instance=ExtResource("23_83oc1")]
unique_name_in_owner = true
visible = false

[node name="Start Anim" parent="." instance=ExtResource("24_acm6t")]
unique_name_in_owner = true
visible = false

[node name="EndGamePanel" parent="." instance=ExtResource("24_ifdyl")]
unique_name_in_owner = true

[connection signal="timeout" from="StateManager/Loading/MaxLoadTime" to="StateManager/Loading" method="_on_max_load_time_timeout"]
[connection signal="local" from="SelectionUI/LocalOrOnline" to="StateManager/LocalOrOnline" method="_on_local_button_down"]
[connection signal="online" from="SelectionUI/LocalOrOnline" to="StateManager/LocalOrOnline" method="_on_online_button_down"]
[connection signal="back" from="SelectionUI/Matchmaking Menu" to="StateManager/OnlineMatchmaking" method="_on_back_button_down"]
[connection signal="back" from="SelectionUI/Waiting For Connect" to="StateManager/WaitingForPlayers" method="_on_back_button_down"]
[connection signal="back" from="SelectionUI/Player Select Menu" to="StateManager/PlayerSelect" method="_on_back_button_down"]
[connection signal="players_ready" from="SelectionUI/Player Select Menu" to="StateManager/PlayerSelect" method="_on_player_select_screen_players_ready"]
[connection signal="players_unready" from="SelectionUI/Player Select Menu" to="StateManager/RoundStarting" method="_on_player_select_screen_players_unready"]
[connection signal="back" from="SelectionUI/FailedToLoad" to="StateManager/FailedToLoad" method="_on_back_button_down"]
[connection signal="back" from="SelectionUI/UserDisconnect" to="StateManager/UserDisconnect" method="_on_back_button_down"]
[connection signal="end" from="EndGamePanel" to="StateManager/EndScreen" method="_on_end_button_down"]
[connection signal="restart" from="EndGamePanel" to="StateManager/EndScreen" method="_on_restart_button_down"]
